--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
     </div>
     -->
     <footer class="site-footer">
-      <p><strong>In alpha development | build 0.0.174</strong></p>
+      <p><strong>In alpha development | build 0.0.177</strong></p>
     </footer>
+    <form>
+      <button formaction="https://github.com/IpErrinio/HangM">
+        Link do repo
+      </button>
+    </form>
   </body>
 </html>
